Add Jupyter notebook for exploratory data analysis on bank transactions
- Created a new notebook
- Imported transaction data from an Excel file
- Displayed the transaction data in a formatted table
- Exported the DataFrame to a CSV file for further analysis

--- a/openai_recommender.ipynb
+++ b/openai_recommender.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key=\"api-key\"\n"
+    "api_key=\"apikey\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4fb60d4a",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-19 19:55:56.170495: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-11-25 08:06:44.328061: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "/home/ariel/Escritorio/proyectos/RoboAdvisoryGenAI/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1763600166.918235   84614 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1352 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "I0000 00:00:1764076010.685481   35442 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1709 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -35,21 +35,7 @@
       "🔄 Reinicializando recursos NLTK después de deserialización...\n",
       "📥 Descargando recurso NLTK: wordnet\n",
       "📥 Descargando recurso NLTK: omw-1.4\n",
-      "✅ TextPreprocessor deserializado correctamente\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_84614/2783746091.py:340: DtypeWarning: Columns (1,3,5,6,7,8,24,25,27,29,30,31,32,33) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(os.path.join(PATH_DATA, \"BankChurners.csv\"))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "✅ TextPreprocessor deserializado correctamente\n",
       "📂 Cargando Word2Vec desde pipelines/word2vec_model.bin\n",
       "🤖 Cargando modelo SBERT: all-MiniLM-L6-v2\n"
      ]
@@ -58,11 +44,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-19 19:56:31.864531: I external/local_xla/xla/service/service.cc:163] XLA service 0x7358bc004fc0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "2025-11-19 19:56:31.864545: I external/local_xla/xla/service/service.cc:171]   StreamExecutor device (0): NVIDIA GeForce RTX 3050 Laptop GPU, Compute Capability 8.6\n",
-      "2025-11-19 19:56:31.911205: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2025-11-19 19:56:32.044744: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:473] Loaded cuDNN version 91002\n",
-      "I0000 00:00:1763600192.274368   84988 device_compiler.h:196] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n",
+      "2025-11-25 08:07:08.905484: I external/local_xla/xla/service/service.cc:163] XLA service 0x73fd600024f0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2025-11-25 08:07:08.905496: I external/local_xla/xla/service/service.cc:171]   StreamExecutor device (0): NVIDIA GeForce RTX 3050 Laptop GPU, Compute Capability 8.6\n",
+      "2025-11-25 08:07:08.916082: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-11-25 08:07:08.955773: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:473] Loaded cuDNN version 91002\n",
+      "I0000 00:00:1764076029.221721   35652 device_compiler.h:196] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n",
       "/home/ariel/Escritorio/proyectos/RoboAdvisoryGenAI/.venv/lib/python3.12/site-packages/sklearn/pipeline.py:61: FutureWarning: This Pipeline instance is not fitted yet. Call 'fit' with appropriate arguments before using other methods such as transform, predict, etc. This will raise an error in 1.8 instead of the current warning.\n",
       "  warnings.warn(\n"
      ]
@@ -73,17 +59,17 @@
      "text": [
       "\n",
       "🔹 RESULTADOS 🔹\n",
-      "Sentimientos: {'GLOVE': {'neg': 5.674561634805286e-06, 'neu': 7.528636160714086e-06, 'pos': 0.9999867677688599}, 'SBERT': {'neg': 9.383037288769255e-14, 'neu': 1.183769970936055e-09, 'pos': 1.0}, 'Word2Vec': {'neg': 8.698896891701224e-08, 'neu': 2.152667910593209e-08, 'pos': 0.9999998807907104}}\n",
-      "Promedio positividad: 0.9999955\n",
-      "Score modelo recomendación: 2.7982589017483406e-05\n",
-      "Decisión del modelo: RECHAZAR\n",
+      "Sentimientos: {'GLOVE': {'neg': 4.971271394538235e-08, 'neu': 1.0333885830382528e-10, 'pos': 1.0}, 'SBERT': {'neg': 1.925584865170027e-11, 'neu': 2.604151116969433e-09, 'pos': 1.0}, 'Word2Vec': {'neg': 2.2951690326067364e-08, 'neu': 2.3197045413009265e-12, 'pos': 1.0}}\n",
+      "Promedio positividad: 1.0\n",
+      "Score modelo recomendación: 1.0\n",
+      "Decisión del modelo: APROBAR\n",
       "\n",
       "--- Análisis GPT ---\n",
       "\n",
-      "1. Se debe rechazar la solicitud de tarjeta de crédito.\n",
-      "2. A pesar del sentimiento positivo del cliente, su perfil financiero es desconocido y el modelo recomienda rechazar.\n",
-      "3. Características clave: Ingreso alto, historial crediticio desconocido, baja utilización de crédito, poca información sobre educación y estado civil, falta de detalles sobre la queja.\n",
-      "4. Recomendación final: RECHAZAR.\n"
+      "1. Se debe otorgar la tarjeta de crédito.\n",
+      "2. El cliente muestra una actitud positiva y agradecida, lo cual indica una buena disposición para mantener una relación financiera.\n",
+      "3. Características clave: historial de pagos positivo, bajo nivel de endeudamiento, alta actividad de transacciones, estabilidad laboral y satisfacción con el servicio al cliente.\n",
+      "4. Recomendación final: APROBAR\n"
      ]
     }
    ],
@@ -279,12 +265,45 @@
     "        print(\"✅ TextPreprocessor deserializado correctamente\")\n",
     "\n",
     "\n",
-    "# --- Transformadores ---\n",
+    "class DateFeatureGenerator(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"\n",
+    "    Genera la columna 'DaysSinceLast' basada en la diferencia de fechas.\n",
+    "    Debe ejecutarse ANTES de DropColumns.\n",
+    "    \"\"\"\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        # Creamos una copia para no afectar el dataframe original fuera del pipeline\n",
+    "        X = X.copy()\n",
+    "        \n",
+    "        # Verificamos que las columnas existan antes de operar\n",
+    "        if 'TransactionDate' in X.columns and 'PreviousTransactionDate' in X.columns:\n",
+    "            # Asegurar tipo datetime\n",
+    "            X['TransactionDate'] = pd.to_datetime(X['TransactionDate'])\n",
+    "            X['PreviousTransactionDate'] = pd.to_datetime(X['PreviousTransactionDate'])\n",
+    "            \n",
+    "            # Calcular diferencia\n",
+    "            # Nota: Según tu lógica es Previous - Transaction\n",
+    "            X['TimeSinceLastTransaction'] = X['PreviousTransactionDate'] - X['TransactionDate']\n",
+    "            \n",
+    "            # Convertir a días (segundos totales / 86400)\n",
+    "            X['DaysSinceLast'] = X['TimeSinceLastTransaction'].dt.total_seconds() / 86400\n",
+    "            \n",
+    "        return X\n",
+    "\n",
     "class DropColumns(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"\n",
+    "    Elimina columnas innecesarias del dataset de clientes.\n",
+    "    \"\"\"\n",
     "    def __init__(self):\n",
-    "        self.columns = ['CustomerID', 'Id Complain', 'Id Interaction', 'date_received', \n",
-    "                        'Survey date', 'Twitter', 'NPS', 'product', 'sub_product', \n",
-    "                        'issue', 'sub_issue', 'Gender']\n",
+    "        self.columns = [\n",
+    "            'CustomerID', 'Id Complain', 'Id Interaction', 'date_received', \n",
+    "            'Survey date', 'Twitter', 'NPS', 'product', 'sub_product', \n",
+    "            'issue', 'sub_issue', 'Gender', 'TransactionID', 'AccountID', \n",
+    "            'DeviceID', 'IP Address', 'MerchantID', \"TransactionDate\",\n",
+    "            \"PreviousTransactionDate\", 'TimeSinceLastTransaction'\n",
+    "        ]\n",
     "    \n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
@@ -427,7 +446,7 @@
     "    advisor = CreditAdvisor(api_key=API_KEY)\n",
     "\n",
     "    # Cargar dataset\n",
-    "    df = pd.read_csv(os.path.join(PATH_DATA, \"BankChurners.csv\"))\n",
+    "    df = pd.read_csv(os.path.join(PATH_DATA, \"BankChurners_merged.csv\"))\n",
     "    df.drop(columns=['NPS'], inplace=True)\n",
     "    df = df.dropna(subset=['Twitter'])\n",
     "\n",
